--- a/bloks/header/__lang-link/header__lang-link.css
+++ b/bloks/header/__lang-link/header__lang-link.css
@@ -2,10 +2,12 @@
   color: #FFFFFF;
   font-size: 24px;
   line-height: 28px;
+  text-decoration: none;
 }
 
 .header__lang-link:first-of-type {
   margin-right: 18px;
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 420px) {
@@ -13,4 +15,3 @@
     font-size: 18px;
   }
 }
-
