--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -5,8 +5,8 @@
 }
 
 @font-face {
-	src: url(../fonts/Inter-Bold.woff) format('woff'),
-			 url(../fonts/Inter-Bold.woff2) format('woff2');
+	src: url(../fonts/Inter-Black.woff) format('woff'),
+			 url(../fonts/Inter-Black.woff2) format('woff2');
   font-family: Inter;
   font-weight: bold;
 }
