--- a/bloks/cover/__overlay/cover__overlay.css
+++ b/bloks/cover/__overlay/cover__overlay.css
@@ -11,3 +11,15 @@
   z-index: 1;
 }
 
+.cover__overlay:hover {
+  background-color: #2A2C2F;
+  opacity: 0.8;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
