--- a/bloks/cover/cover.css
+++ b/bloks/cover/cover.css
@@ -13,10 +13,11 @@
   align-items: center;
   justify-content: center;
   position: relative;
+
 }
 
-.cover:hover {
-  background-color: rgba(0, 0, 100, .8);
+
+/*.cover:hover {
   height: 100%;
   width: 100%;
   display: flex;
@@ -29,7 +30,7 @@
   padding: 20px;
   opacity: .3;
   z-index: 2;
-}
+}*/
 
 
 @media screen and (min-width: 1280px) {
