--- a/bloks/cover/__overlay/cover__overlay.css
+++ b/bloks/cover/__overlay/cover__overlay.css
@@ -1,25 +1,31 @@
+.cover__overlay {
+  text-decoration: none;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
 .cover__overlay::before {
   content: "";
   background-color: #2A2C2F;
   opacity: 0.3;
   display: block;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   position: absolute;
   z-index: 1;
+
 }
 
-.cover__overlay:hover {
-  background-color: #2A2C2F;
+.cover__overlay:hover::before {
   opacity: 0.8;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
+  background-color: #2A2C2F;
+  transition: opacity 0.2s linear;
 }
+
 
