--- a/bloks/cover/__subtitle/cover__subtitle.css
+++ b/bloks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,8 @@
   line-height: 122%;
   text-align: center;
   max-width: 360px;
-  z-index: 2;
+  z-index: 3;
+  margin: 0px;
 }
 
 @media screen and (max-width: 420px) {
