--- a/bloks/place/__paragraph/place__paragraph.css
+++ b/bloks/place/__paragraph/place__paragraph.css
@@ -2,9 +2,10 @@
   margin: 0px;
   font-size: 18px;
   line-height: 163%;
+  margin-bottom: 27px;
 /*  grid-area: place__paragraph;*/
 }
 
-.place__paragraph:first-of-type {
-  margin-bottom: 27px;
+.place__paragraph:last-of-type {
+  margin-bottom: 0px;
 }
