--- a/page/index.css
+++ b/page/index.css
@@ -7,6 +7,7 @@
 @import url(../bloks/header/__logo/header__logo.css);
 @import url(../bloks/header/__lang-links/header__lang-links.css);
 @import url(../bloks/header/__lang-link/header__lang-link.css);
+@import url(../bloks/header/__lang-link/_active/header__lang-link_active.css);
 
 @import url(../bloks/lead/lead.css);
 @import url(../bloks/lead/__title/lead__title.css);
@@ -18,6 +19,7 @@
 @import url(../bloks/intro/__list/intro__list.css);
 @import url(../bloks/intro/__text/intro__text.css);
 @import url(../bloks/intro/__title/intro__title.css);
+@import url(../bloks/intro/__span-accent/intro__span-accent.css);
 
 @import url(../bloks/photo-grid/photo-grid.css);
 @import url(../bloks/photo-grid/__item/photo-grid__item.css);
