--- a/bloks/footer/__copyright/footer__copyright.css
+++ b/bloks/footer/__copyright/footer__copyright.css
@@ -3,10 +3,11 @@
   line-height: 114%;
   text-align: right;
   margin: 0px;
+  white-space: nowrap;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 700px) {
   .footer__copyright {
-    margin-top: 30px;
+    margin-top: 16px;
   }
 }
