--- a/bloks/footer/__link/footer__link.css
+++ b/bloks/footer/__link/footer__link.css
@@ -4,9 +4,14 @@
   line-height: 112%;
   color: #FFFFFF;
   text-decoration: none;
+  transition: 0.2s linear;
 }
 
-@media screen and (max-width: 768px) {
+.footer__link:hover {
+  opacity: .8;
+}
+
+@media screen and (max-width: 700px) {
   .footer__link {
     font-size: 24px;
     line-height: 100%;
