--- a/bloks/footer/footer.css
+++ b/bloks/footer/footer.css
@@ -3,14 +3,20 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 24px;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 @media screen and (max-width: 768px) {
   .footer {
     margin: 88px 24px 0px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .footer {
     flex-direction: column;
     align-items: flex-start;
+    flex-wrap: wrap;
   }
 }
 
