--- a/bloks/header/__lang-link/header__lang-link.css
+++ b/bloks/header/__lang-link/header__lang-link.css
@@ -3,11 +3,15 @@
   font-size: 24px;
   line-height: 28px;
   text-decoration: none;
+  transition: 0.2s linear;
 }
 
 .header__lang-link:first-of-type {
   margin-right: 18px;
+}
 
+.header__lang-link:hover {
+  opacity: .8;
 }
 
 /*.header__lang-link:lang(ru):first-of-type {
