--- a/bloks/intro/__title/intro__title.css
+++ b/bloks/intro/__title/intro__title.css
@@ -12,8 +12,9 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 420px) {
   .intro__title {
     font-size: 32px;
+    line-height: 109%;
   }
 }
