--- a/bloks/lead/__subtitle/lead__subtitle.css
+++ b/bloks/lead/__subtitle/lead__subtitle.css
@@ -6,15 +6,16 @@
   width: 100%;
 }
 
-@media screen and (max-width: 320px) {
-  .lead__subtitle {
-    font-size: 16px;
-    line-height: 125%;
-  }
-}
-
 @media screen and (max-width: 668px) {
   .lead__subtitle {
     font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 125%;
+    margin: 16px auto 40px;
   }
 }
