--- a/bloks/place/__link/place__link.css
+++ b/bloks/place/__link/place__link.css
@@ -5,4 +5,9 @@
   text-decoration-line: underline;
   color: #FFFFFF;
   letter-spacing: 0px;
+  transition: 0.2s linear;
+}
+
+.place__link:hover {
+  opacity: .8;
 }
