--- a/bloks/place/__paragraph/place__paragraph.css
+++ b/bloks/place/__paragraph/place__paragraph.css
@@ -9,3 +9,16 @@
 .place__paragraph:last-of-type {
   margin-bottom: 0px;
 }
+
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__paragraph {
+    margin: 0px 16px 25px;
+  }
+}
