--- a/bloks/place/__website/place__website.css
+++ b/bloks/place/__website/place__website.css
@@ -6,3 +6,9 @@
   align-self: end;
 /*  grid-area: place__website;*/
 }
+
+@media screen and (max-width: 320px) {
+  .place__website {
+    margin: 0px 16px;
+  }
+}
